--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.2.4"
   }
 }
