--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "myntra-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.2",
-    "@next/font": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.14",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4"
-  }
+   "name": "myntra-frontend",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev -p 3001",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@emotion/react": "^11.10.5",
+      "@emotion/styled": "^11.10.5",
+      "@mui/icons-material": "^5.11.0",
+      "@mui/material": "^5.11.2",
+      "@next/font": "13.1.1",
+      "next": "13.1.1",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-slick": "^0.29.0",
+      "slick-carousel": "^1.8.1"
+   },
+   "devDependencies": {
+      "autoprefixer": "^10.4.13",
+      "postcss": "^8.4.14",
+      "sass": "^1.57.1",
+      "tailwindcss": "^3.2.4"
+   }
 }
