--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
       "@mui/icons-material": "^5.11.0",
       "@mui/material": "^5.11.2",
       "@next/font": "13.1.1",
+      "@reduxjs/toolkit": "^1.9.3",
       "next": "13.1.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
       "react-icons": "^4.7.1",
+      "react-redux": "^8.0.5",
       "react-slick": "^0.29.0",
       "slick-carousel": "^1.8.1"
    },
