--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "@mui/material": "^5.11.2",
       "@next/font": "13.1.1",
       "@reduxjs/toolkit": "^1.9.3",
+      "axios": "^1.3.4",
       "formik": "^2.2.9",
       "next": "13.1.1",
       "react": "18.2.0",
