--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@reduxjs/toolkit": "^1.9.3",
       "axios": "^1.3.4",
       "formik": "^2.2.9",
+      "jwt-decode": "^3.1.2",
       "next": "13.1.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
